--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,9 +4,10 @@
   "description": "Browse catalog",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
+  "start_url": "/",
   "display": "standalone",
   "icons": [{
     "src": "images/icon.png",
-    "sizes": "512x512"
+    "sizes": "300x300"
   }]
 }
