--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "description": "Browse catalog",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "icons": [{
     "src": "images/icon.png",
